--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
 }
-.container {
+.container-fluid {
   font-family: sans-serif;
   font-size: 25px;
   width: 100%;
@@ -29,6 +29,7 @@
   margin: 5px;
   border-color: #eee;
   border-radius: 50px;
+  max-width: 50px;
   float: left;
   background-color: #eee;
 }
